src/presentational/Pages/Predict/predict.module.scss
.predict {
  background-color: #fafafa;
  min-height: 80vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
}

.section {
  width: 100%;
}

.window__section{
  margin-bottom: 50px;
}

.predict__title__vertical{
  writing-mode: vertical-lr;
  text-orientation: upright;
  text-align:right;
  font:{
    size: 130px;
    family: Noto Sans;
    weight: bold;
  }
   text-shadow: 6px -8px white, 4px -8px #CC9423,8px -8px #CC9423, 6px -6px #CC9423, 6px -10px #CC9423, 8px -10px #CC9423;
}

.predict__title__vertical__sm{
  writing-mode: vertical-lr;
  text-orientation: upright;
  text-align:right;
  margin-top: 30px;
  font:{
    size: 100px;
    family: Noto Sans;
    weight: bold;
  }
   text-shadow: 6px -8px white, 4px -8px #CC9423,8px -8px #CC9423, 6px -6px #CC9423, 6px -10px #CC9423, 8px -10px #CC9423;
}

.predict__subtitle__vertical{
  writing-mode: vertical-lr;
  text-orientation: upright;
  font:{
    size: 60px;
    family: Noto Sans;
    weight: bold;
  }
}

.cover__text__predict{
  writing-mode: vertical-rl;
  margin-left: 100px;
}

.text__vertical__rl{
  writing-mode: vertical-rl;
}

.text__vertical__lr{
  writing-mode: vertical-lr;
}

.date{
  width: 30px;
  margin-top: 5vh;
  margin-left: 50px;
  font:{
    family: Noto Sans;
    weight: bold;
  }
}

.date__sm{
  width: 16px;
  margin-top: 5vh;
  margin-left: 50px;
  font:{
    family: Noto Sans; 
    weight: bold;
    size: 0.75rem;
  }
}

.date_gold{
  color:#CC9423;
}

.section__brief{
  white-space:nowrap;
}

.section__brief__red{
  margin-left: 10px;
  white-space:nowrap;
  color:#FF2600;
}

.predict__Bottom__subtitle{
  writing-mode: vertical-lr;
  text-orientation: sideways;
  font:{
    size: 70px;
    family: Noto Sans;
    weight: bold;
  }
  color: white;
}

.bottom__graphic__goldLine{
  border-color: #CC9423;
  background-color: #273A3C;
}

.bottom__graphic__whiteLine{
  border-color:white;
}

.bottom__oval__red{
  border-radius: 50%;
  background-color: #FF2600;
  height: 20vw;
  width: 20vw;
}

.bottom__oval__gold{
  border-radius: 50%;
  border-color: #CC9423;
  height: 6vw;
  width: 6vw;
}

.bottom__oval__container{
  display:flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

.bottom__redOval__container{
  display:flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  background: repeating-linear-gradient(to right, white, white 20px, #B2ABA1 20px,  #B2ABA1 40px, white 40px, white 60px, #CC9423 60px, #CC9423 80px);
}

.bottom__button__black{
  background-color: #273A3C;
  color:white;
}

.bottom__linkIntro__text{
  color:white;
}

.votes__subtitle{
  margin-top: 40px;
  margin-bottom: 40px;
  padding-left: 20px;
  border-left: 2px solid black;
}

